<resources>
    <string name="app_name">PersonalFinancePlanner</string>

    <!--Starting Page Strings-->
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="setup_account">Setup Account</string>
    <string name="next">Next</string>
    <string name="app_title">Midas</string>
    <string name="slogan">Budgeting Made Golden</string>

    <!-- Account Creation Activity Strings -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="security_answer_one">Answer 1</string>
    <string name="security_answer_two">Answer 2</string>
    <string name="sign_up_btn">Finish</string>
    <string name="prompt_income">Monthly income/budget (USD)</string>
    <string name="prompt_goal">Monthly goal (optional)</string>

    <!-- Budget Display Activity Strings -->
    <string name="welcome_string">Welcome </string>
    <string name="currency_header">Change Currency</string>


    <!-- Error Messages -->

    <string name="user_fields_empty_error">Please fill out all fields!</string>
    <string name="username_already_taken_error">Oops! That username is already taken</string>
    <string name="incorrect_login_creds">Incorrect password or username!</string>
    <string name="error_message">Please fill out all fields!</string>
    <string name="add_duplicate_currency_error">Error: currency type has already been added to saved list.</string>
    <string name="remove_USD_error_message">"Error: cannot delete default currency."</string>
    <string name="empty_income_field">"Please enter an income amount to help us make your budgeting golden!"</string>
    <string name="income_val_invalid">"Invalid income value entered"</string>

    <!-- Dropdown Selection Strings -->
    <string-array name="securityQuestionOneChoices">
        <item>Please select a security question.</item>
        <item>What was your childhood nickname?</item>
        <item>In what city did you meet your spouse/significant other?</item>
        <item>What is the name of your favorite childhood friend?</item>
        <item>What street did you live on in third grade?</item>
        <item>What is your oldest sibling\’s birthday month and year? (e.g., January 1900)</item>
        <item>What is the middle name of your youngest child?</item>
        <item>What is your oldest sibling\'s middle name?</item>
        <item>What school did you attend for sixth grade?</item>
    </string-array>

    <string-array name="securityQuestionTwoChoices">
        <item>Please select a security question.</item>
        <item>What is the name of the company of your first job?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What is the street number of the house you grew up in?</item>
        <item>What was the first concert you attended?</item>
        <item>What is your grandmother\'s first name?</item>
        <item>What was the make and model of your first car?</item>
        <item>What was your high school mascot?</item>
        <item>What was the name of your favorite childhood pet?</item>
    </string-array>

    <!-- Login Page Strings -->
    <string name="login_header">Log in</string>
    <string name="login_login">Log In</string>

    <!-- tutorial strings-->
    <string name="meet_midas">Study, work, play, and do not go broke.</string>
    <string name="tutorial_intro">Leave the math to Midas.</string>
    <string name="budget_intro">Whether you plan to bungee jump in NZ, shop on the Champs-Elysees, hike up to Machu Picchu, or take a taxi through Tokyo you need to make sure you do not run out of cash. Creating, using, and updating a personal or family budget can help you achieve your goals and develop a sense of safety and self-reliance. If you do not have one yet, do not worry! We will explain a few key concepts and help you get started making your dreams into reality with Midas.</string>
    <string name="budget_continue">Effective Budgeting</string>
    <string name="budget_step1">STEP 1: SET S.M.A.R.T. Financial Goals</string>
    <string name="budget_step2">STEP 2: Set your Budget</string>
    <string name="budget_step3">STEP 3: Record your expenses</string>
    <string name="budget_step4">STEP 4: Track your Progress</string>
    <string name="skip_tutorial">Skip the Tutorial</string>
    <string name="continue_tutorial">Get Started >></string>
    <string name="continue_tutorial2">Continue >></string>
    <string name="step1_title">Set S.M.A.R.T. Goals</string>
    <string name="step1_subtitle">STEP 1</string>
    <string name="step1_S">- Specific</string>
    <string name="step1_M">- Measurable</string>
    <string name="step1_A">- Attainable</string>
    <string name="step1_R">- Relevant</string>
    <string name="step1_T">- Time-bound</string>
    <string name="step1_description">Decide what you are about. Think long term and consider your future needs. What core values and beliefs are most important to you? </string>
    <string name="step1_description2">Write your goals down. Determine the costs of your goals in money, time, and effort. Set time frames for when your goals can reasonably be accomplished. And finally, share your goals with
    others who can help you stay accountable.</string>
    <string name="step1_description3">Take a few minutes now to set goals. We recommend using a vision board in a private space to help inspire and motivate you. Remember to keep your goals SMART:</string>
    <string name="step1_description4">Finished setting goals? Great! You are ready to start learning how to use Midas to make your financial goals into financial reality.</string>
    <string name="step2_title">Set your Budget</string>
    <string name="step2_subtitle">STEP 2</string>
    <string name="step2_income_prompt">Enter your income: </string>
    <string name="step2_setBudget">Continue >></string>
    <string name="step2_entertainment">Entertainment (USD)</string>
    <string name="step2_shopping">Shopping (USD)</string>
    <string name="step2_education">Education (USD)</string>
    <string name="step2_personal">Personal Care (USD)</string>
    <string name="step2_health">Health and Fitness (USD)</string>
    <string name="step2_kids">Kids (USD)</string>
    <string name="step2_food">Food and Dining (USD)</string>
    <string name="step2_gifts">Gifts and Donations (USD)</string>
    <string name="step2_investments">Investments (USD)</string>
    <string name="step2_bills">Bills and Utilities (USD)</string>
    <string name="step2_transport">Auto and Transport (USD)</string>
    <string name="step2_travel">Travel (USD)</string>
    <string name="step2_fees">Fees and Charges (USD)</string>
    <string name="step2_business">Business (USD)</string>
    <string name="step2_miscellaneous">Miscellaneous (USD)</string>
    <string name="step2_description">Now categorize your monthly spending. Try to spend less than you earn so that you can have the financial resources to achieve your goals.</string>
    <string name="step2_expense_prompt">Total Expenses</string>
    <string name="step2_setButton">Set</string>
</resources>