<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#A1A1A1"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step1_title"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_marginTop="10dp"
                android:text="@string/step1_description3"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView15"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/biorhyme"
                android:text="@string/step1_S"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/biorhyme"
                android:text="@string/step1_M"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/biorhyme"
                android:text="@string/step1_A"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/biorhyme"
                android:text="@string/step1_R"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/biorhyme"
                android:text="@string/step1_T"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView14"
                android:layout_marginTop="10dp"
                android:text="@string/step1_description4"
                android:textColor="#000000" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#606060"
        android:onClick="onClick"
        android:text="@string/skip_tutorial"
        android:textColor="#CACACA" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/continue_tutorial2" />


</RelativeLayout>