<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#A1A1A1"
    android:paddingLeft="16dp"
    android:paddingTop="45dp"
    android:paddingRight="16dp">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budget_continue"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="36sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_marginTop="12dp"
                android:text="@string/budget_step1"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button1"
                android:layout_marginTop="4dp"
                android:text="@string/budget_step2"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_marginTop="4dp"
                android:text="@string/budget_step3"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button3"
                android:layout_marginTop="4dp"
                android:text="@string/budget_step4"
                android:textAlignment="viewStart" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/cardView2"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:text="@string/continue_tutorial" />
</RelativeLayout>