<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/blue_bubble3"
        android:layout_width="316.36dp"
        android:layout_height="316.36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="310dp"
        android:background="@drawable/blue_bubble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/red_bubble3"
        android:layout_width="166dp"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="381dp"
        android:background="@drawable/red_bubble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/yellow_bubble3"
        android:layout_width="370dp"
        android:layout_height="296dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/yellow_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/biorhyme"
        android:text="@string/login_header"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:autofillHints="email"
        android:background="@drawable/button_border"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="122dp"
        android:paddingLeft="10dp"
        android:autofillHints="password"
        android:background="@drawable/button_border"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginText"
        app:layout_constraintVertical_bias="0.517" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="176dp"
        android:text="@string/login_login"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>